samples/_failures_safe/1761533860_b82a8b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7a6a3d7.c: In function ‘main’:
./samples/SAFE/__tmp_b7a6a3d7.c:143:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  143 |     size_t compressed
      |     ^~~~~~
./samples/SAFE/__tmp_b7a6a3d7.c:143:5: error: expected declaration or statement at end of input
